--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,14 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  margin: 0;
+  color: #dedede;
+  background-color: #333;
+}
